# Smaragdine_Synthetica

./: COMPLETE_LISTING.md  ENGINE.md  README.md  SMARAGDINE.md  commit.txt  pyproject.toml
lean/: Belnap.lean  BelnapCategory.lean  Consciousness.lean  FrobeniusFiltration.lean  GateOrdering.lean  IG_Algebra.lean  LiarIdempotent.lean  TierRefinement.lean  TimeFixedPoint.lean
manuscripts/: 01_conventional_decomposition.md  02_paper_skeleton.md  DISTILLATE.md
manuscripts/alchemical_theory_of_math/: 01_conventional_decomposition.md  02_paper_skeleton.md  03_paper.md  04_liar_and_idempotent.md
manuscripts/alchemical_theory_of_math/_builds/01_conventional_decomposition/: 01_conventional_decomposition.tex  _body.tex
manuscripts/alchemical_theory_of_math/_builds/03_paper/: 03_paper.tex  _body.md  _body.tex
manuscripts/rebis/: REBIS.md
manuscripts/rebis/_builds/DISTILLATE/: DISTILLATE.tex  _body.tex
manuscripts/rebis/_builds/REBIS/: REBIS.tex  _body.tex
smaragdine_synthetica/: __init__.py  cli.py  navigator.py
